Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24193

Windows: QFontDatabase autotest fails

XMLWordPrintable

    • 4f1820e3a77b3fdda32a1b935502b187e73059cf

      Windows: QFontDatabase autotest fails:

      QWARN  : tst_QFontDatabase::addAppFont(font file) This plugin does not support application fonts
      QWARN  : tst_QFontDatabase::addAppFont(font file) qwindowsfontdatabase_ft.cpp:415: class QStringList __thiscall QWindowsFontDatabaseFT::addApplicationFont(const
       class QByteArray &,const class QString &): Unimplemented code.
      FAIL!  : tst_QFontDatabase::addAppFont(font file) Compared values are not the same
         Actual (fontDbChangedSpy.count()): 0
         Expected (1): 1
      .\tst_qfontdatabase.cpp(248) : failure location
      QWARN  : tst_QFontDatabase::addAppFont(memory font) This plugin does not support application fonts
      QWARN  : tst_QFontDatabase::addAppFont(memory font) qwindowsfontdatabase_ft.cpp:415: class QStringList __thiscall QWindowsFontDatabaseFT::addApplicationFont(con
      st class QByteArray &,const class QString &): Unimplemented code.
      FAIL!  : tst_QFontDatabase::addAppFont(memory font) Compared values are not the same
         Actual (fontDbChangedSpy.count()): 0
         Expected (1): 1
      .\tst_qfontdatabase.cpp(248) : failure location
      

      Remember to enable the test in CI after it has been fixed.

        For Gerrit Dashboard: QTBUG-24193
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes