src/plugins/platforms/windows/qwindowsfontdatabase.cpp
@@ -15,6 +15,9 @@ DECL|function|fontEngine
 DECL|function|fontSmoothingGamma
 DECL|function|getEnglishName
 DECL|function|getEnglishName
+DECL|function|getFamiliesAndSignatures
+DECL|function|getFontTable
+DECL|function|getTrueTypeFontOffsets
 DECL|function|getUShort
 DECL|function|initDirectWrite
 DECL|function|localizedName
@@ -22,6 +25,7 @@ DECL|function|operator <<
 DECL|function|populate
 DECL|function|populateFontDatabase
 DECL|function|releaseHandle
+DECL|function|removeApplicationFonts
 DECL|function|scriptRequiresOpenType
 DECL|function|storeFont
 DECL|function|systemDefaultFont
