src/plugins/platforms/windows/qwindowsfontdatabase.h
@@ -100,8 +100,16 @@ public:
 
 private:
     void populate(const QString &family = QString());
+    void removeApplicationFonts();
     QSharedPointer<QWindowsFontEngineData> m_fontEngineData;
     QSet<QString> m_families;
+
+    struct WinApplicationFont {
+        HANDLE handle;
+        QString fileName;
+    };
+
+    QList<WinApplicationFont> m_applicationFonts;
 };
 
 QT_END_NAMESPACE
