src/plugins/platforms/windows/qwindowsfontdatabase_ft.cpp
@@ -273,14 +273,13 @@ static int CALLBACK storeFont(ENUMLOGFONTEX* f, NEWTEXTMETRICEX *textmetric,
 
 void QWindowsFontDatabaseFT::populateFontDatabase()
 {
-    if (m_families.isEmpty()) {
-        QPlatformFontDatabase::populateFontDatabase();
-        populate(); // Called multiple times.
-        // Work around EnumFontFamiliesEx() not listing the system font, see below.
-        const QString sysFontFamily = QGuiApplication::font().family();
-        if (!m_families.contains(sysFontFamily))
-             populate(sysFontFamily);
-    }
+    m_families.clear();
+    QPlatformFontDatabase::populateFontDatabase();
+    populate(); // Called multiple times.
+    // Work around EnumFontFamiliesEx() not listing the system font, see below.
+    const QString sysFontFamily = QGuiApplication::font().family();
+    if (!m_families.contains(sysFontFamily))
+         populate(sysFontFamily);
 }
 
 /*!
@@ -426,14 +425,6 @@ QStringList QWindowsFontDatabaseFT::fallbacksForFamily(const QString family, con
                  << script << result << m_families;
     return result;
 }
-
-QStringList QWindowsFontDatabaseFT::addApplicationFont(const QByteArray &fontData, const QString &fileName)
-{
-    const QStringList result = QPlatformFontDatabase::addApplicationFont(fontData, fileName);
-    Q_UNIMPLEMENTED();
-    return result;
-}
-
 QString QWindowsFontDatabaseFT::fontDir() const
 {
     const QString result = QLatin1String(qgetenv("windir")) + QLatin1String("/Fonts");//QPlatformFontDatabase::fontDir();
